examples/test/testpolicy1927.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1927
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key10: value7
      key11: value14
      key36: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value4
          key28: value0
      podSelector:
        matchLabels:
          key48: value49
          key42: value3
          key31: value10
